# TeristaSpaceV3.3

./: .gitignore  BUILD.md  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  pr-checks.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: device_admin_policies.xml  file_paths.xml
bcore/: build.gradle.kts
bcore/src/main/: AndroidManifest.xml
bcore/src/main/cpp/: CMakeLists.txt  native_bridge.cpp  process_monitor.cpp  system_info.cpp
compiler/: build.gradle.kts
compiler/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
native/: build.gradle.kts
native/src/main/: AndroidManifest.xml
native/src/main/cpp/: CMakeLists.txt  native_core.cpp
proxy/: build.gradle.kts
proxy/src/main/: AndroidManifest.xml
reflection/: build.gradle.kts  consumer-rules.pro
reflection/src/main/: AndroidManifest.xml
sandbox/: build.gradle.kts
sandbox/src/main/: AndroidManifest.xml
virtual-device/: build.gradle.kts
virtual-device/src/main/: AndroidManifest.xml
virtual-fs/: build.gradle.kts
virtual-fs/src/main/: AndroidManifest.xml
virtual-process/: build.gradle.kts
virtual-process/src/main/: AndroidManifest.xml
virtual-services/: build.gradle.kts
virtual-services/src/main/: AndroidManifest.xml
(+38 files in other folders)
